--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,8 @@ authors = ["crypto_gohan <crypto_gohan@protonmail.com>"]
 edition = "2018"
 
 [dependencies]
+async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
+cached = "0.23.0"
+serde = { version = "1.0", features = ["derive"] }
+surf = "2.2.0"
+tide = "0.16.0"
