--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ cached = "0.23.0"
 serde = { version = "1.0", features = ["derive"] }
 surf = "2.2.0"
 tide = "0.16.0"
+chrono = "0.4.19"
+serde_json = "1.0.64"
