--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
 cached = "0.23.0"
 chrono = "0.4.19"
+lru = "0.6.5"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.64"
 surf = "2.2.0"
