--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,24 +2,25 @@ steps:
   # Build the container image
   - name: "gcr.io/kaniko-project/executor:latest"
     args:
-      - --destination=gcr.io/$PROJECT_ID/image
+      - --destination=gcr.io/$PROJECT_ID/farmhand:$COMMIT_SHA
       - --cache=true
       - --cache-ttl=168h
+  # Push the container image to Container Registry
+  - name: "gcr.io/cloud-builders/docker"
+    args: ["push", "gcr.io/$PROJECT_ID/farmhand:$COMMIT_SHA"]
   # Deploy container image to Cloud Run
   - name: "gcr.io/google.com/cloudsdktool/cloud-sdk"
     entrypoint: gcloud
     args:
-      [
-        "run",
-        "deploy",
-        "farmhand",
-        "--image",
-        "gcr.io/crypto-gohan/farmhand",
-        "--region",
-        "europe-west-1",
-        "--platform",
-        "managed",
-      ]
+      - "run"
+      - "deploy"
+      - "farmhand"
+      - "--image"
+      - "gcr.io/$PROJECT_ID/farmhand:$COMMIT_SHA"
+      - "--region"
+      - "eu-west-1"
+      - "--platform"
+      - "managed"
 images:
-  - gcr.io/crypto-gohan/farmhand
+  - "gcr.io/$PROJECT_ID/farmhand:$COMMIT_SHA"
 timeout: 3600s
